Fix footer gap

--- a/src/components/Camo/Camo.module.css
+++ b/src/components/Camo/Camo.module.css
@@ -18,8 +18,23 @@
     text-transform: uppercase;
 }
 
-.text__wrapper {}
+/* .text__wrapper {} */
 
 .text {
     text-indent: 1rem;
+    padding: 1rem 0;
 }
+
+.list {
+    max-width: 100%;
+}
+
+.list__item {
+    padding: 1rem 2rem 0;
+    list-style-type: none;
+}
+
+/* @media (max-width: 900px) {
+   
+} */
+
